--- a/app/views/letters/_nav.html.erb
+++ b/app/views/letters/_nav.html.erb
@@ -4,9 +4,10 @@
     <div class="px-3 py-3 lg:px-5 lg:pl-3">
       <div class="flex items-center">
         <%# logo %>
-        <div class="w-1/6 flex items-center justify-start ml-100">
+        <div class="w-1/6 flex items-center justify-start ml-3">
           <a href="#" class="text-xl font-bold flex items-center lg:ml-2.5">
-          <svg class="h-6 mr-2 " xmlns="http://www.w3.org/2000/svg" viewBox="0 0 591 90" fill="#4f4f4f" xmlns:v="https://vecta.io/nano"><path d="M265.886 16.046l-28.062 34.215v23.631h-15.569v-23.63l-28-34.215h17.477l18.338 23.262 18.277-23.262h17.538zm25.108 57.846h-15.631V16.046h15.631v57.846zm107.077 0h-15.508V33.277l-21.477 40.615h-14.954l-21.477-40.615v40.615h-15.569V16.046h21.169L353.578 59.8l23.385-43.754h21.108v57.846zm82.708 0h-15.631v-5.723h0q-2.954 1.662-6.4 2.954h0 0q-3.446 1.231-7.138 2.092h0 0q-3.692.923-7.631 1.354h0 0Q440.04 75 436.04 75h0 0q-4.677 0-8.985-.862h0 0q-4.369-.923-7.754-2.892h0 0q-3.323-1.969-5.415-5.169h0 0q-2.031-3.2-2.031-7.815h0 0q0-5.846 3.2-9.723h0 0q3.2-3.877 9.785-6.4h0 0q6.523-2.462 16.554-3.815h0 0q10.092-1.354 23.754-2.092h0V35h0q0-1.415-.738-2.831h0 0q-.738-1.415-2.769-2.462h0 0q-1.969-1.108-5.477-1.785h0 0q-3.446-.677-8.8-.677h0 0q-4.308 0-8.431.431h0 0q-4.123.492-8 1.231h0 0q-3.815.738-7.262 1.785h0 0q-3.446.985-6.277 2.092h0V18.877h0q2.954-.738 6.585-1.477h0 0q3.692-.677 7.631-1.231h0 0q3.938-.492 8-.862h0 0q4-.308 7.754-.308h0 0q7.262 0 13.415 1.231h0 0q6.092 1.169 10.585 3.692h0 0q4.431 2.523 6.892 6.4h0 0q2.523 3.877 2.523 9.231h0v38.338zm-15.631-18.769v-7.631h0q-8.985.369-15.262.985h0 0q-6.277.615-10.462 1.477h0 0q-4.185.8-6.523 1.785h0 0q-2.4.985-3.569 1.969h0 0q-1.169 1.046-1.477 2.031h0 0q-.246.985-.246 1.846h0 0q0 1.046.554 1.969h0 0q.554.923 1.908 1.662h0 0q1.354.738 3.631 1.108h0 0q2.277.431 5.723.431h0 0q3.815 0 7.508-.554h0 0q3.631-.615 6.892-1.662h0 0q3.323-.985 6.215-2.4h0 0q2.831-1.415 5.108-3.015h0zm49.046 18.769h-15.569V16.046h15.569v57.846zm33.723-57.846v33.108h0q0 3.631.677 5.908h0 0q.677 2.277 2.154 3.631h0 0q1.538 1.354 3.938 1.846h0 0q2.462.492 5.969.492h0 29.6v12.862h-32.8 0q-6.831 0-11.569-1.108h0 0q-4.8-1.169-7.815-3.446h0 0q-3.015-2.338-4.369-5.969h0 0q-1.415-3.569-1.415-8.492h0V16.046h15.631zM165.553 0H58.319a9.59 9.59 0 0 0-9.574 9.574v70.851A9.59 9.59 0 0 0 58.319 90h107.234a9.59 9.59 0 0 0 9.574-9.574V9.574A9.59 9.59 0 0 0 165.553 0zm-9.266 11.489l-43.476 38.834-43.478-38.834h86.953zm-96.053 7.277l28.114 25.112L60.234 68.99V18.766zm6.589 59.745l30.148-26.929 9.161 8.182a9.58 9.58 0 0 0 13.358 0l9.161-8.182 30.15 26.929H66.823zm96.815-11.083L137.274 43.88l26.364-23.549v47.097zM35.34 13.404H6.617c-3.173 0-5.745 2.572-5.745 5.745s2.572 5.745 5.745 5.745H35.34c3.173 0 5.745-2.572 5.745-5.745s-2.572-5.745-5.745-5.745zm0 26.809H21.936c-3.173 0-5.745 2.572-5.745 5.745s2.572 5.745 5.745 5.745H35.34c3.173 0 5.745-2.572 5.745-5.745s-2.572-5.745-5.745-5.745z"/></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" width="169" height="26" fill="none" xmlns:v="https://vecta.io/nano"><path d="M114.663 20.493h-4.384V8.784l-6.073 11.709h-4.228L93.906 8.784v11.709h-4.402V3.816h5.985l6.594 12.614 6.612-12.614h5.968v16.677zm23.384 0h-4.419v-1.65c-.557.32-1.16.603-1.809.852a18.22 18.22 0 0 1-2.019.603c-.696.177-1.415.307-2.157.39a20.25 20.25 0 0 1-2.245.124 12.68 12.68 0 0 1-2.54-.248c-.824-.177-1.554-.455-2.192-.834-.627-.378-1.137-.875-1.531-1.49-.383-.615-.575-1.366-.575-2.253 0-1.124.302-2.058.905-2.803s1.525-1.36 2.767-1.845c1.229-.473 2.789-.84 4.68-1.1l6.716-.603v-.355a1.77 1.77 0 0 0-.209-.816c-.139-.272-.4-.509-.782-.71-.372-.213-.888-.385-1.549-.515-.65-.13-1.479-.195-2.488-.195a22.48 22.48 0 0 0-2.384.124l-2.262.355a20.08 20.08 0 0 0-2.053.515l-1.775.603V4.632l1.862-.426 2.158-.355 2.262-.249 2.192-.089c1.369 0 2.633.118 3.793.355 1.148.225 2.146.579 2.993 1.064.835.485 1.484 1.1 1.948 1.845.476.745.713 1.632.713 2.661v11.053zm-4.419-5.411v-2.2l-4.315.284-2.958.426c-.789.154-1.404.325-1.844.515-.453.189-.789.379-1.009.568-.221.201-.36.396-.418.586a2.26 2.26 0 0 0-.069.532c0 .201.052.39.156.568s.284.337.54.479.597.248 1.026.319c.429.083.969.124 1.618.124a14.03 14.03 0 0 0 2.123-.16c.684-.118 1.334-.278 1.949-.479.626-.189 1.212-.42 1.757-.692a11.27 11.27 0 0 0 1.444-.87zm13.867 5.411h-4.402V3.816h4.402v16.677zm9.535-16.677v9.545c0 .698.063 1.266.191 1.703s.331.787.609 1.047c.29.26.661.438 1.113.532.465.095 1.027.142 1.688.142H169v3.708h-9.274c-1.287 0-2.378-.107-3.271-.32-.904-.225-1.641-.556-2.209-.993a3.82 3.82 0 0 1-1.235-1.721c-.267-.686-.4-1.502-.4-2.448V3.816h4.419z" fill="#2894ff" style="mix-blend-mode:multiply"/><path d="M78.134 20.48h4.419V3.803h-4.419V20.48zm-10.865-6.813l7.934-9.864h0-4.959l-5.168 6.706-5.185-6.706H54.95l7.916 9.864v6.813h4.402v-6.813z" style="mix-blend-mode:multiply" fill="#f3774d"/><path d="M31.649 14.508L43.941 3.312H31.649 19.356l12.293 11.196zm-6.917-1.858l-7.949-7.24v14.48l7.949-7.24zm2.438 2.221l-8.524 7.764h26.005l-8.524-7.764-2.59 2.359a2.68 2.68 0 0 1-3.777 0l-2.59-2.359zm11.395-2.22l7.454 6.789V5.861l-7.454 6.789zM1.624 3.864h8.121c.897 0 1.624.742 1.624 1.656s-.727 1.656-1.624 1.656H1.624C.727 7.177 0 6.435 0 5.521s.727-1.656 1.624-1.656zm4.332 7.73h3.79c.897 0 1.624.742 1.624 1.656s-.727 1.656-1.624 1.656h-3.79c-.897 0-1.624-.742-1.624-1.656s.727-1.656 1.624-1.656z" style="mix-blend-mode:multiply" fill="#2894ff"/></svg>
+       <%# <svg class="h-6 mr-8 " xmlns="http://www.w3.org/2000/svg" viewBox="0 0 591 90" fill="#4f4f4f" xmlns:v="https://vecta.io/nano"><path d="M265.886 16.046l-28.062 34.215v23.631h-15.569v-23.63l-28-34.215h17.477l18.338 23.262 18.277-23.262h17.538zm25.108 57.846h-15.631V16.046h15.631v57.846zm107.077 0h-15.508V33.277l-21.477 40.615h-14.954l-21.477-40.615v40.615h-15.569V16.046h21.169L353.578 59.8l23.385-43.754h21.108v57.846zm82.708 0h-15.631v-5.723h0q-2.954 1.662-6.4 2.954h0 0q-3.446 1.231-7.138 2.092h0 0q-3.692.923-7.631 1.354h0 0Q440.04 75 436.04 75h0 0q-4.677 0-8.985-.862h0 0q-4.369-.923-7.754-2.892h0 0q-3.323-1.969-5.415-5.169h0 0q-2.031-3.2-2.031-7.815h0 0q0-5.846 3.2-9.723h0 0q3.2-3.877 9.785-6.4h0 0q6.523-2.462 16.554-3.815h0 0q10.092-1.354 23.754-2.092h0V35h0q0-1.415-.738-2.831h0 0q-.738-1.415-2.769-2.462h0 0q-1.969-1.108-5.477-1.785h0 0q-3.446-.677-8.8-.677h0 0q-4.308 0-8.431.431h0 0q-4.123.492-8 1.231h0 0q-3.815.738-7.262 1.785h0 0q-3.446.985-6.277 2.092h0V18.877h0q2.954-.738 6.585-1.477h0 0q3.692-.677 7.631-1.231h0 0q3.938-.492 8-.862h0 0q4-.308 7.754-.308h0 0q7.262 0 13.415 1.231h0 0q6.092 1.169 10.585 3.692h0 0q4.431 2.523 6.892 6.4h0 0q2.523 3.877 2.523 9.231h0v38.338zm-15.631-18.769v-7.631h0q-8.985.369-15.262.985h0 0q-6.277.615-10.462 1.477h0 0q-4.185.8-6.523 1.785h0 0q-2.4.985-3.569 1.969h0 0q-1.169 1.046-1.477 2.031h0 0q-.246.985-.246 1.846h0 0q0 1.046.554 1.969h0 0q.554.923 1.908 1.662h0 0q1.354.738 3.631 1.108h0 0q2.277.431 5.723.431h0 0q3.815 0 7.508-.554h0 0q3.631-.615 6.892-1.662h0 0q3.323-.985 6.215-2.4h0 0q2.831-1.415 5.108-3.015h0zm49.046 18.769h-15.569V16.046h15.569v57.846zm33.723-57.846v33.108h0q0 3.631.677 5.908h0 0q.677 2.277 2.154 3.631h0 0q1.538 1.354 3.938 1.846h0 0q2.462.492 5.969.492h0 29.6v12.862h-32.8 0q-6.831 0-11.569-1.108h0 0q-4.8-1.169-7.815-3.446h0 0q-3.015-2.338-4.369-5.969h0 0q-1.415-3.569-1.415-8.492h0V16.046h15.631zM165.553 0H58.319a9.59 9.59 0 0 0-9.574 9.574v70.851A9.59 9.59 0 0 0 58.319 90h107.234a9.59 9.59 0 0 0 9.574-9.574V9.574A9.59 9.59 0 0 0 165.553 0zm-9.266 11.489l-43.476 38.834-43.478-38.834h86.953zm-96.053 7.277l28.114 25.112L60.234 68.99V18.766zm6.589 59.745l30.148-26.929 9.161 8.182a9.58 9.58 0 0 0 13.358 0l9.161-8.182 30.15 26.929H66.823zm96.815-11.083L137.274 43.88l26.364-23.549v47.097zM35.34 13.404H6.617c-3.173 0-5.745 2.572-5.745 5.745s2.572 5.745 5.745 5.745H35.34c3.173 0 5.745-2.572 5.745-5.745s-2.572-5.745-5.745-5.745zm0 26.809H21.936c-3.173 0-5.745 2.572-5.745 5.745s2.572 5.745 5.745 5.745H35.34c3.173 0 5.745-2.572 5.745-5.745s-2.572-5.745-5.745-5.745z"/></svg> %>
           </a>
         </div>
         <%# 搜尋列 %>
@@ -20,8 +21,12 @@
             <%= text_field_tag :search, params[:search], placeholder: "Search...",class:"rounded-xl border border-gray-300 text-gray-900 sm:text-sm focus:ring-cyan-600 focus:border-cyan-600 w-full pl-10 p-2.5" %>
           <% end %>
         </div>
-        <li><%= link_to 'English', locale: 'en' %></li>
-        <li><%= link_to '中文', locale: 'zh-TW' %></li>
+        <div class=" flex items-center ml-auto" >
+        <ul><%= link_to 'English', locale: 'en' %></ul>
+        </div>
+        <div class=" flex items-center ml-auto" >        
+        <ul><%= link_to '中文', locale: 'zh-TW' %></ul>
+        </div>
         <%# 漢堡選單 %>
         <div class="flex items-center ml-auto">
           <div class="dropdown inline-block relative items-center mr-10">
@@ -45,14 +50,14 @@
 
 <%# sidebar %>
 <div id=sidebar class="flex overflow-hidden bg-white pt-16 w-4/12">
-  <aside id="sidebar" class="fixed hidden z-20 h-full top-0 left-0 pt-16 lg:flex flex-shrink-0 flex-col w-1/6 transition-width duration-75" aria-label="Sidebar">
+  <aside id="sidebar" class="fixed hidden z-20 h-full top-0 left-0 pt-16 lg:flex flex-shrink-0 flex-col w-64 transition-width duration-75" aria-label="Sidebar">
     <div class="relative flex-1 flex flex-col min-h-0 border-r border-gray-200 bg-white pt-0">
       <div class="flex-1 flex flex-col pt-5 pb-4 overflow-y-auto">
         <div class="flex-1 px-3 bg-white divide-y space-y-1">
           <ul class="space-y-2 pb-2">
             <li class="px-5 m-2">
               <div class="flex flex-row items-center h-8 justify-center my-6">
-                <%= link_to "#{t("compose")}", new_letter_path, class: "text-center w-full bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 border-b-4 border-green-600 hover:border-blue rounded-lg shadow-lg" %> 
+                <%= link_to "#{t("compose")}", new_letter_path, class: "text-center w-full bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 border-b-4 border-blue-600 hover:border-blue rounded-lg " %> 
               </div>
             </li> 
             <%# 收件夾 %>
@@ -64,7 +69,7 @@
                     <path d="M3 5a2 2 0 012-2h1a1 1 0 010 2H5v7h2l1 2h4l1-2h2V5h-1a1 1 0 110-2h1a2 2 0 012 2v10a2 2 0 01-2 2H5a2 2 0 01-2-2V5z"></path>
                   </svg>
                   <span class="ml-3 flex-1 whitespace-nowrap"><%= "#{t("inbox")}" %></span>
-                  <span class="bg-red-200 text-red-800 ml-3 text-sm font-medium inline-flex items-center justify-center px-2 rounded-full">123</span>
+                  <span class="bg-white text-blue-500 ml-3 text-sm font-medium inline-flex items-center justify-center px-2 rounded-full border-double border-2 border-blue-500	">123</span>
                 </div>
               <% end %>
             </li>
