--- a/app/views/letters/_email-content.html.erb
+++ b/app/views/letters/_email-content.html.erb
@@ -91,7 +91,7 @@
                             <%= letter.subject %> -
                           </span>
                           <span  class="font-light">
-                            <%= letter.content %>
+                            <%= letter.body %>
                           </span>
                         </div>
                         <div class="ml-auto p-4 pr-10 text-base font-normal text-gray-900 max-w-sm xl:max-w-screen-md 2xl:max-w-screen-lg truncate overflow-hidden">
