--- a/app/views/letters/_email-content.html.erb
+++ b/app/views/letters/_email-content.html.erb
@@ -52,7 +52,7 @@
         <div class="overflow-x-auto">
           <div class="align-middle inline-block min-w-full">
             <div class="shadow overflow-hidden">
-              <% letters.each do |letter| %> 
+              <% letters.each do |letter| %>
                 <div class="w-full letter_container flex hover:bg-gray-100 border">
                   <%# checkbox %>
                   <div class="flex w-10 mr-2 items-center justify-center">
@@ -91,7 +91,7 @@
                             <%= letter.subject %> -
                           </span>
                           <span  class="font-light">
-                            <%= letter.body %>
+                            <%= letter.content %>
                           </span>
                         </div>
                         <div class="ml-auto p-4 pr-10 text-base font-normal text-gray-900 max-w-sm xl:max-w-screen-md 2xl:max-w-screen-lg truncate overflow-hidden">
