--- a/app/views/letters/_nav.html.erb
+++ b/app/views/letters/_nav.html.erb
@@ -36,10 +36,8 @@
               <%= current_user.username %>
             </div>
             <ul class="dropdown-content w-32  absolute hidden text-gray-700 pt-1">
-              <li><%= link_to "重設密碼", edit_user_registration_path, class:"rounded-b bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" %></li>
-              <li><%= link_to "兩階段認證", user_enable_authy_path, method: 'post', class:"rounded-b bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" %></li>
-              <li><%= link_to "其他設定", edit_user_registration_path, class:"rounded-b bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" %></li>
-              <li><%= link_to "登出", destroy_user_session_path, method: 'delete', class:"rounded-b bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" %></li>
+              <li><%= link_to "#{t("reset_pw")}", edit_user_registration_path, class:"rounded-b bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" %></li>
+              <li><%= link_to "#{t("log_out")}", destroy_user_session_path, method: 'delete', class:"rounded-b bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" %></li>
             </ul>
           </div>
         </div>
@@ -123,7 +121,7 @@
               </svg>
               <span class="ml-4"><%= "#{t("5xruby")}" %></span>
             </a>
-            <div class="flex item-center">
+            <div class="flex item-center text-base text-gray-900 font-normal rounded-lg hover:bg-gray-100 group transition duration-75 flex items-center p-2">
               <svg class="w-6 h-6 text-gray-500 flex-shrink-0 group-hover:text-gray-900 transition duration-75" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                 <path d="M9 2a1 1 0 000 2h2a1 1 0 100-2H9z"></path>
                 <path fill-rule="evenodd" d="M4 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v11a2 2 0 01-2 2H6a2 2 0 01-2-2V5zm3 4a1 1 0 000 2h.01a1 1 0 100-2H7zm3 0a1 1 0 000 2h3a1 1 0 100-2h-3zm-3 4a1 1 0 100 2h.01a1 1 0 100-2H7zm3 0a1 1 0 100 2h3a1 1 0 100-2h-3z" clip-rule="evenodd"></path>
