--- a/app/views/letters/partial/_email_content.html.erb
+++ b/app/views/letters/partial/_email_content.html.erb
@@ -47,7 +47,7 @@
           <div class="align-middle inline-block min-w-full">
             <div class="shadow overflow-hidden">
               <% letters.each do |letter| %>
-              <div class="w-full letter_container flex hover:bg-gray-100 border">
+                <div class="w-full letter_container flex hover:bg-gray-100 border">
                 <%# checkbox %>
                 <div class="flex w-10 mr-2 items-center justify-center">
                   <input id="checkbox" aria-describedby="checkbox-1" type="checkbox" 
@@ -85,13 +85,16 @@
                           <%= letter.subject %>
                         </span>
                       </div>
+                      <div class="h-6 font-light max-w-sm xl:max-w-screen-md 2xl:max-w-screen-lg truncate overflow-hidden overflow-ellipsis whitespace-nowrap">
+                          <%# letter.content%>
+                      </div>
                       <div class="ml-auto p-4 pr-10 text-base font-normal text-gray-900 max-w-sm xl:max-w-screen-md 2xl:max-w-screen-lg truncate overflow-hidden">
                         <%= letter.created_at.strftime("%Y/%m/%d") %>
                       </div>
                     </div>
                   <% end %>
                 </div>
-              </div>
+            </div>
               <% end %> 
             </div>
           </div>
