--- a/app/views/letters/partial/_email_content.html.erb
+++ b/app/views/letters/partial/_email_content.html.erb
@@ -1,8 +1,10 @@
 <%# email-content %>
   <div id="main-content" class="h-screen w-5/6 ml-auto bg-gray-50 relative overflow-y-auto">
-    <div class="pt-6 px-4 ">
-      <div class=" p-4 bg-white block sm:flex items-center justify-between border-b border-gray-200 lg:mt-1.5">
+    <div class="pt-6 px-4">
+      <div class="p-4 bg-white block sm:flex items-center justify-between border-b border-gray-200 lg:mt-1.5">
+        <%# 所有小圖示列 %>
         <div class="flex items-center divide-x divide-gray-100">
+          <%# 全選 %>
           <div class="pr-3">
             <input id="checkbox-all" aria-describedby="checkbox-1" type="checkbox" class="bg-gray-50 border-gray-300 focus:ring-3 focus:ring-cyan-200 h-4 w-4 rounded">
             <label for="checkbox-all" class="sr-only">checkbox</label>
@@ -15,15 +17,16 @@
               </div>
             <% end %>
             <%# label選單 %>
-            <div class="dropdown inline-block relative items-center mr-10">
+            <div class="dropdown inline-block relative items-center mr-10" id='labelBtn'>
               <a href="#" class="text-gray-500 hover:text-gray-900 cursor-pointer p-1 hover:bg-gray-100 rounded inline-flex justify-center">
                 <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-gray-500 flex-shrink-0 group-hover:text-gray-900 transition duration-75" viewBox="0 0 20 20" fill="currentColor">
                   <path fill-rule="evenodd" d="M17.707 9.293a1 1 0 010 1.414l-7 7a1 1 0 01-1.414 0l-7-7A.997.997 0 012 10V5a3 3 0 013-3h5c.256 0 .512.098.707.293l7 7zM5 6a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd" />
                 </svg>            
               </a>
-              <ul class="dropdown-content w-32  absolute hidden text-gray-700 pt-1">
+              <ul class="dropdown-content min-w-max absolute hidden text-gray-700 pt-1">
                 <% @labels.each do |label| %> 
-                  <li class="rounded-b bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"><%= label.hierarchy %></li>
+                  <li data-id='<%= label.id%>' id='labelItem'
+                      class="rounded-b bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"><%= label.hierarchy %></li>
                 <% end %>
                   <li><%= link_to '建立標籤', new_label_path, class:"rounded-b bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" %></li>
               </ul>
@@ -34,6 +37,8 @@
             </a>
           </div>
         </div>
+
+        <%# 頁碼 %>
         <div class="hidden sm:flex items-center space-y-3 sm:space-y-0 space-x-0 sm:space-x-3">
           <a href="#" class="text-gray-500 hover:text-gray-900 cursor-pointer p-1 hover:bg-gray-100 rounded inline-flex justify-center">
             <svg class="w-7 h-7" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
@@ -44,6 +49,8 @@
           <span class="sm:text-xs md:text-sm font-normal text-gray-500">Show <span class="text-gray-900 font-semibold">1-25</span> of <span class="text-gray-900 font-semibold">100</span></span>
         </div>
       </div>
+
+      <%# 每一封信 %>
       <div class="flex flex-col">
         <div class="overflow-x-auto">
           <div class="align-middle inline-block min-w-full">
@@ -51,7 +58,8 @@
               <% letters.each do |letter| %>
                 <div class="w-full letter_container flex hover:bg-gray-100 border">
                   <%# checkbox %>
-                  <div data-id='<%= letter.id %>' id="letterItem" class="flex w-10 mr-2 items-center justify-center">
+                  <div data-id='<%= letter.id %>' id="each_letter"
+                       class="flex w-10 mr-2 items-center justify-center">
                     <input id="checkbox" aria-describedby="checkbox-1" type="checkbox" 
                             class=" bg-gray-50 border-gray-300 focus:ring-3 focus:ring-cyan-200 h-4 w-4 rounded" onClick="event.stopPropagation();">
                     <label for="checkbox" class="sr-only">checkbox</label>
@@ -62,17 +70,17 @@
                         data-starmail-starred-value="<%= user_signed_in? && current_user %>"
                         data-starmail-letter-id-value="<%= letter.id %>">
                     <div data-action="click->starmail#star" data-starmail-target="btn" >
-                    <% if letter.star %>
-                      <svg class="text-yellow-300 w-6 h-6 "  fill="currentColor" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z">
-                        </path>
-                      </svg>
-                    <% else %>
-                      <svg class="text-gray-400 w-6 h-6 hover:text-yellow-300" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z">
-                        </path>
-                      </svg>
-                    <% end %>
+                      <% if letter.star %>
+                        <svg class="text-yellow-300 w-6 h-6 "  fill="currentColor" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z">
+                          </path>
+                        </svg>
+                      <% else %>
+                        <svg class="text-gray-400 w-6 h-6 hover:text-yellow-300" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z">
+                          </path>
+                        </svg>
+                      <% end %>
                     </div>
                   </div>
                   <%# 信件摘要 %>
@@ -82,13 +90,13 @@
                         <div class="w-1/6 p-4 items-center whitespace-nowrap space-x-4 text-base font-semibold text-gray-900">
                           <%= letter.user.username %>
                         </div>
-                        <div class="w-4/6 flex p-4 text-base text-gray-900 truncate overflow-hidden">
-                          <span class="font-bold mr-2">
-                            <%= letter.subject %>
-                          </span>
-                        </div>
-                        <div class="h-6 font-light max-w-sm xl:max-w-screen-md 2xl:max-w-screen-lg truncate overflow-hidden overflow-ellipsis whitespace-nowrap">
+                        <div class="add_label_tag w-4/6 flex p-4 text-base text-gray-900 truncate overflow-ellipsis">
+                          <div class="font-bold mr-2">
+                            <%= letter.subject %> -
+                          </div>
+                          <div class="h-6 font-light max-w-sm xl:max-w-screen-md 2xl:max-w-screen-lg truncate overflow-hidden overflow-ellipsis whitespace-nowrap">
                             <%# letter.content%>
+                          </div>
                         </div>
                         <div class="ml-auto p-4 pr-10 text-base font-normal text-gray-900 max-w-sm xl:max-w-screen-md 2xl:max-w-screen-lg truncate overflow-hidden">
                           <%= letter.created_at.strftime("%Y/%m/%d") %>
