--- a/app/views/letters/partial/_email_content.html.erb
+++ b/app/views/letters/partial/_email_content.html.erb
@@ -91,11 +91,16 @@
                           <%= letter.user.username %>
                         </div>
                         <div class="w-4/6 flex p-4 text-base text-gray-900 truncate overflow-ellipsis">
+                          <% letter.labels.each do |label|%>
+                            <div class="bg-yellow-500 border rounded-md mx-1 px-1">
+                              <%= label.title %>
+                            </div>
+                          <% end %>
                           <div class="font-bold mr-2">
                             <%= letter.subject %> -
                           </div>
                           <div class="h-6 font-light max-w-sm xl:max-w-screen-md 2xl:max-w-screen-lg truncate overflow-hidden overflow-ellipsis whitespace-nowrap">
-                            <%# letter.content%>
+                            <%= letter.content%>
                           </div>
                         </div>
                         <div class="ml-auto p-4 pr-10 text-base font-normal text-gray-900 max-w-sm xl:max-w-screen-md 2xl:max-w-screen-lg truncate overflow-hidden">
