--- a/app/views/letters/show.html.erb
+++ b/app/views/letters/show.html.erb
@@ -86,9 +86,16 @@
 
     <%# content %>
     <div class="p-5">
-      <h1 class="text-2xl font-bold text-gray-900 mb-4">
-        <%= @letter.subject %>
-      </h1>
+      <div class="flex items-start">
+        <h1 class="text-2xl font-bold text-gray-900 mb-4 mr-2">
+          <%= @letter.subject %>
+        </h1>
+        <% @letter.labels.each do |label|%>
+          <div class="bg-yellow-500 border rounded-md mx-1 px-1">
+            <%= label.title %>
+          </div>
+        <% end %>
+      </div>
       <div class="flex items-center mb-4">
         <div class="flex-shrink-0">
           <svg class="h-8 w-8 text-gray-500"  fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 2a9 9 0 11-18 0 9 9 0 0118 0z"/></svg>
